--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
 }
 body {
+  color: #dbd4b4;
   background-color: rgba(159, 141, 178, 0.651);
   display: flex;
   flex-direction: column;
@@ -13,10 +14,17 @@ body {
   font-family: sans-serif;
 }
 
+p {
+  color: rgba(0, 0, 0, 0.295);
+  margin: 10px 0;
+}
 .city {
   display: none;
 }
 
+#tokyo {
+  display: block;
+}
 button {
   margin: 10px;
   padding: 10px 20px;
@@ -26,11 +34,32 @@ button {
   cursor: pointer;
 }
 
-button:hover {
-  transition: all 0.3s ease-in-out;
-  background-color: rgb(0, 0, 0);
-  color: rgb(255, 255, 255);
+button {
+  background-image: linear-gradient(
+    to right,
+    #cc95c0 0%,
+    #dbd4b4 51%,
+    #cc95c0 100%
+  );
 }
+button {
+  margin: 10px;
+  padding: 15px 45px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  box-shadow: 0 0 20px #eee;
+  border-radius: 10px;
+}
+
+button:hover {
+  background-position: right center;
+  color: #fff;
+  text-decoration: none;
+}
+
 .content {
   display: flex;
   flex-direction: column;
